--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -130,9 +130,9 @@ jobs:
       - name: Commit changes
         if: success()
         run: |
+          echo "Configuring git user..."
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add README.md
+          git add README.md apps/pv_opt/pv_opt.py
           git commit -m "Update version in README.md to $patch_version"
-          git push origin patch
-  
+          git push --set-upstream origin ${{ github.head_ref }}
