--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -62,3 +62,104 @@ jobs:
           else
             echo "No changes detected. Nothing to commit or push."
           fi
+
+  validate-version:
+    name: Validate Version
+    runs-on: ubuntu-latest
+    needs: auto-format
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Fetch main branch into a temporary branch
+        run: |
+          git fetch origin main
+          git checkout -b temp-main origin/main
+
+      - name: Get VERSION from patch branch
+        id: get_patch_version
+        run: |
+          VERSION=$(grep -m 1 -oP '(?<=^VERSION = ")[^"]+' apps/pv_opt/pv_opt.py)
+          if [ -z "$VERSION" ]; then
+            echo "Error: VERSION not found in apps/pv_opt/pv_opt.py on patch branch." >&2
+            exit 1
+          fi
+          echo "patch_version=$VERSION" >> $GITHUB_ENV
+
+      - name: Get VERSION from main branch
+        id: get_main_version
+        run: |
+          git checkout temp-main
+          VERSION=$(grep -m 1 -oP '(?<=^VERSION = ")[^"]+' apps/pv_opt/pv_opt.py)
+          if [ -z "$VERSION" ]; then
+            echo "Error: VERSION not found in apps/pv_opt/pv_opt.py on main branch." >&2
+            exit 1
+          fi
+          echo "main_version=$VERSION" >> $GITHUB_ENV
+
+      - name: Validate or Fix Version Increment
+        id: validate_or_fix_version
+        run: |
+          patch_version=$patch_version
+          main_version=$main_version
+
+          # Extract PATCH numbers
+          main_patch=$(echo "$main_version" | awk -F '.' '{print $3}')
+          patch_patch=$(echo "$patch_version" | awk -F '.' '{print $3}')
+
+          # Check if the patch version is incremented correctly
+          if [ "$patch_patch" -ne $((main_patch + 1)) ]; then
+            echo "Warning: PATCH version is not incremented correctly. Fixing..."
+            new_patch_version=$(echo "$main_version" | awk -F '.' '{print $1"."$2"."($3+1)}')
+            sed -i "s/^VERSION = \".*\"/VERSION = \"$new_patch_version\"/" apps/pv_opt/pv_opt.py
+            echo "Corrected version to $new_patch_version."
+            echo "patch_version=$new_patch_version" >> $GITHUB_ENV
+          fi
+
+      - name: Update README.md version
+        run: |
+          sed -i "1s/v[0-9]*\.[0-9]*\.[0-9]*/v$patch_version/" README.md
+
+      - name: Commit Changes if Needed
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add apps/pv_opt/pv_opt.py README.md
+          git diff --cached --quiet || git commit -m "Fix version and update README.md to $patch_version"
+
+
+  commit-changes:
+    needs:
+      - auto-format
+      - validate-version
+    name: Commit and Push All Changes
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Configure Git User
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
+
+      - name: Pull Latest Changes
+        run: |
+          git checkout -b patch || git checkout patch
+          git pull origin patch --rebase
+
+      - name: Commit All Changes
+        run: |
+          git add README.md apps/pv_opt/pv_opt.py
+          git commit --amend --no-edit || echo "No changes to commit"
+
+      - name: Push Changes
+        run: |
+          git push --force-with-lease --set-upstream origin patch
+
+        
