--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -34,39 +34,11 @@ jobs:
           echo "Running isort..."
           isort .
 
-      # Step 5: Commit and push changes if any files were modified
-      - name: Commit and Push Changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "Configuring git user..."
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          echo "Checking for changes..."
-          git status
-
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "Changes detected. Inspecting changes..."
-            git diff
-
-            echo "Staging files..."
-            git add .
-
-            echo "Committing changes..."
-            git commit -m "Auto-format code with Black and isort"
-
-            echo "Pushing changes to branch..."
-            git push
-            echo "Push completed successfully."
-          else
-            echo "No changes detected. Nothing to commit or push."
-          fi
-
   validate-version:
     name: Validate Version
     runs-on: ubuntu-latest
     needs: auto-format
+    if: github.base_ref == 'main' && startsWith(github.head_ref, 'patch')
 
     steps:
       - name: Checkout Repository
@@ -123,13 +95,6 @@ jobs:
         run: |
           sed -i "1s/v[0-9]*\.[0-9]*\.[0-9]*/v$patch_version/" README.md
 
-      - name: Commit Changes if Needed
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add apps/pv_opt/pv_opt.py README.md
-          git diff --cached --quiet || git commit -m "Fix version and update README.md to $patch_version"
-
 
   commit-changes:
     needs:
@@ -137,6 +102,7 @@ jobs:
       - validate-version
     name: Commit and Push All Changes
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -145,8 +111,8 @@ jobs:
 
       - name: Configure Git User
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Pull Latest Changes
         run: |
@@ -155,11 +121,12 @@ jobs:
 
       - name: Commit All Changes
         run: |
-          git add README.md apps/pv_opt/pv_opt.py
-          git commit --amend --no-edit || echo "No changes to commit"
+          git add .
+          git diff --cached --quiet || git commit -m "Auto-format code and validate version"
 
       - name: Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git push --force-with-lease --set-upstream origin patch
-
-        
+      
