--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -1,11 +1,11 @@
-name: Auto-format Code with Debugging
+name: Auto-format and Validate Version
 
 on:
   pull_request:
 
 jobs:
   auto-format:
-    name: Auto-format with Black and iSort
+    name: Auto-format Code
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +27,7 @@ jobs:
           pip install black isort
 
       # Step 4: Run black and isort to format the code
-      - name: Run Black and isort
+      - name: Format Code with Black and isort
         run: |
           echo "Running black..."
           black --line-length=119 .
@@ -38,7 +38,7 @@ jobs:
     name: Validate Version
     runs-on: ubuntu-latest
     needs: auto-format
-    if: github.base_ref == 'main' && startsWith(github.head_ref, 'patch')
+    if: github.base_ref == 'main' && (startsWith(github.head_ref, 'patch') || startsWith(github.head_ref, 'dev'))
 
     steps:
       - name: Checkout Repository
@@ -78,30 +78,34 @@ jobs:
           patch_version=$patch_version
           main_version=$main_version
 
-          # Extract PATCH numbers
+          main_major=$(echo "$main_version" | awk -F '.' '{print $1}')
+          main_minor=$(echo "$main_version" | awk -F '.' '{print $2}')
           main_patch=$(echo "$main_version" | awk -F '.' '{print $3}')
-          patch_patch=$(echo "$patch_version" | awk -F '.' '{print $3}')
 
-          # Check if the patch version is incremented correctly
-          if [ "$patch_patch" -ne $((main_patch + 1)) ]; then
-            echo "Warning: PATCH version is not incremented correctly. Fixing..."
-            new_patch_version=$(echo "$main_version" | awk -F '.' '{print $1"."$2"."($3+1)}')
-            sed -i "s/^VERSION = \".*\"/VERSION = \"$new_patch_version\"/" apps/pv_opt/pv_opt.py
-            echo "Corrected version to $new_patch_version."
-            echo "patch_version=$new_patch_version" >> $GITHUB_ENV
+          if startsWith "$GITHUB_HEAD_REF" "patch"; then
+            new_patch_version="$main_major.$main_minor.$((main_patch + 1))"
+          elif startsWith "$GITHUB_HEAD_REF" "dev"; then
+            new_patch_version="$main_major.$((main_minor + 1)).0"
+          else
+            echo "Error: Unsupported source branch type." >&2
+            exit 1
           fi
+
+          sed -i "s/^VERSION = \".*\"/VERSION = \"$new_patch_version\"/" apps/pv_opt/pv_opt.py
+          echo "Corrected version to $new_patch_version."
+          echo "VERSION_CHANGED=true" >> $GITHUB_ENV
 
       - name: Update README.md version
         run: |
+          patch_version=$(grep -m 1 -oP '(?<=^VERSION = ")[^"]+' apps/pv_opt/pv_opt.py)
           sed -i "1s/v[0-9]*\.[0-9]*\.[0-9]*/v$patch_version/" README.md
-
 
   commit-changes:
     needs:
-      - auto-format
-      - validate-version
+      - auto-format # Remove dependency on validate-version
     name: Commit and Push All Changes
     runs-on: ubuntu-latest
+    if: success() || github.event.pull_request.base.ref == 'main'
 
     steps:
       - name: Checkout Repository
@@ -114,15 +118,23 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+      - name: Checkout or Create Patch Branch
+        run: |
+          git checkout -b patch || git checkout patch
 
       - name: Commit All Changes
+        env:
+          VERSION_CHANGED: ${{ env.VERSION_CHANGED }}
         run: |
           git add .
-          git diff --cached --quiet || git commit -m "Auto-format code and validate version"
+          if [ "$VERSION_CHANGED" = "true" ]; then
+            git commit -m "Auto-format code and validate version [Version Updated]"
+          else
+            git commit -m "Auto-format code and validate version"
+          fi
 
       - name: Push Changes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git push --force-with-lease --set-upstream origin patch
-      
