--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -22,23 +22,20 @@ jobs:
       # Step 3: Install tools (black and isort)
       - name: Install Tools
         run: |
-          echo "Installing tools..."
           python -m pip install --upgrade pip
           pip install black isort
 
       # Step 4: Run black and isort to format the code
       - name: Format Code with Black and isort
         run: |
-          echo "Running black..."
           black --line-length=119 .
-          echo "Running isort..."
           isort .
 
   validate-version:
     name: Validate Version
     runs-on: ubuntu-latest
     needs: auto-format
-    if: github.base_ref == 'main' && (startsWith(github.head_ref, 'patch') || startsWith(github.head_ref, 'dev'))
+    if: github.base_ref == 'main' && (github.head_ref startsWith 'patch' || github.head_ref startsWith 'dev')
 
     steps:
       - name: Checkout Repository
@@ -82,9 +79,9 @@ jobs:
           main_minor=$(echo "$main_version" | awk -F '.' '{print $2}')
           main_patch=$(echo "$main_version" | awk -F '.' '{print $3}')
 
-          if startsWith "$GITHUB_HEAD_REF" "patch"; then
+          if [[ "$GITHUB_HEAD_REF" == patch* ]]; then
             new_patch_version="$main_major.$main_minor.$((main_patch + 1))"
-          elif startsWith "$GITHUB_HEAD_REF" "dev"; then
+          elif [[ "$GITHUB_HEAD_REF" == dev* ]]; then
             new_patch_version="$main_major.$((main_minor + 1)).0"
           else
             echo "Error: Unsupported source branch type." >&2
@@ -102,7 +99,7 @@ jobs:
 
   commit-changes:
     needs:
-      - auto-format # Remove dependency on validate-version
+      - auto-format
     name: Commit and Push All Changes
     runs-on: ubuntu-latest
     if: success() || github.event.pull_request.base.ref == 'main'
@@ -124,11 +121,11 @@ jobs:
 
       - name: Commit All Changes
         env:
-          VERSION_CHANGED: ${{ env.VERSION_CHANGED }}
+          VERSION_CHANGED: ${{ env.VERSION_CHANGED || 'false' }}
         run: |
           git add .
           if [ "$VERSION_CHANGED" = "true" ]; then
-            git commit -m "Auto-format code and validate version [Version Updated]"
+            git commit -m "Auto-format code and update version to [Version Updated]"
           else
             git commit -m "Auto-format code and validate version"
           fi
