--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -35,7 +35,7 @@ jobs:
     name: Validate Version
     runs-on: ubuntu-latest
     needs: auto-format
-    if: github.base_ref == 'main' && (github.head_ref startsWith 'patch' || github.head_ref startsWith 'dev')
+    if: github.base_ref == 'main' && (startsWith(github.head_ref, 'patch') || startsWith(github.head_ref, 'dev'))
 
     steps:
       - name: Checkout Repository
