--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -55,6 +55,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Skip Validation for Non-patch/dev Branches
         run: |
@@ -68,26 +70,30 @@ jobs:
           git fetch origin main
           git checkout -b temp-main origin/main
 
-      - name: Get VERSION from patch branch
-        id: get_patch_version
-        run: |
-          VERSION=$(grep -m 1 -oP '(?<=^VERSION = ")[^"]+' apps/pv_opt/pv_opt.py)
-          if [ -z "$VERSION" ]; then
-            echo "Error: VERSION not found in apps/pv_opt/pv_opt.py on patch branch." >&2
-            exit 1
-          fi
-          echo "patch_version=$VERSION" >> $GITHUB_ENV
-
-      - name: Get VERSION from main branch
+      - name: Get VERSION from Main Branch
         id: get_main_version
         run: |
-          git checkout temp-main
           VERSION=$(grep -m 1 -oP '(?<=^VERSION = ")[^"]+' apps/pv_opt/pv_opt.py)
           if [ -z "$VERSION" ]; then
             echo "Error: VERSION not found in apps/pv_opt/pv_opt.py on main branch." >&2
             exit 1
           fi
           echo "main_version=$VERSION" >> $GITHUB_ENV
+
+      - name: Switch Back to Source Branch
+        run: |
+          git fetch origin $GITHUB_HEAD_REF
+          git checkout $GITHUB_HEAD_REF
+
+      - name: Get VERSION from Current Branch
+        id: get_patch_version
+        run: |
+          VERSION=$(grep -m 1 -oP '(?<=^VERSION = ")[^"]+' apps/pv_opt/pv_opt.py)
+          if [ -z "$VERSION" ]; then
+            echo "Error: VERSION not found in apps/pv_opt/pv_opt.py on source branch." >&2
+            exit 1
+          fi
+          echo "patch_version=$VERSION" >> $GITHUB_ENV
 
       - name: Validate or Fix Version Increment
         id: validate_or_fix_version
@@ -116,7 +122,7 @@ jobs:
       - name: Update README.md version
         run: |
           new_patch_version=${{ env.new_patch_version }}
-          sed -i "1s/v[0-9]*\\.[0-9]*\\.[0-9]*/v$new_patch_version/" README.md
+          sed -i "1s/v[0-9]*\.[0-9]*\.[0-9]*/v$new_patch_version/" README.md
 
       - name: Commit Version Changes
         if: env.VERSION_CHANGED == 'true'
@@ -127,5 +133,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add apps/pv_opt/pv_opt.py README.md
           git commit -m "Update version to ${{ env.new_patch_version }}"
-          git push origin HEAD
-    
+          git push origin $GITHUB_HEAD_REF
