Update version validation to use tags

--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -65,25 +65,25 @@ jobs:
             exit 0
           fi
 
-      - name: Fetch main branch into a temporary branch
+      - name: Get Latest Tag
+        id: get_latest_tag
         run: |
-          git fetch origin main
-          git checkout -b temp-main origin/main
-
-      - name: Get VERSION from Main Branch
-        id: get_main_version
-        run: |
-          VERSION=$(grep -m 1 -oP '(?<=^VERSION = ")[^"]+' apps/pv_opt/pv_opt.py)
-          if [ -z "$VERSION" ]; then
-            echo "Error: VERSION not found in apps/pv_opt/pv_opt.py on main branch." >&2
+          LATEST_TAG=$(git describe --tags --abbrev=0)
+          if [ -z "$LATEST_TAG" ]; then
+            echo "Error: No tags found in the repository." >&2
             exit 1
           fi
-          echo "main_version=$VERSION" >> $GITHUB_ENV
+          echo "latest_tag=$LATEST_TAG" >> $GITHUB_ENV
 
-      - name: Switch Back to Source Branch
+      - name: Get VERSION from Latest Tag
+        id: get_tag_version
         run: |
-          git fetch origin $GITHUB_HEAD_REF
-          git checkout $GITHUB_HEAD_REF
+          VERSION=$(echo "$LATEST_TAG" | grep -oP '(?<=v)[0-9]+\.[0-9]+\.[0-9]+')
+          if [ -z "$VERSION" ]; then
+            echo "Error: VERSION could not be extracted from the latest tag." >&2
+            exit 1
+          fi
+          echo "tag_version=$VERSION" >> $GITHUB_ENV
 
       - name: Get VERSION from Current Branch
         id: get_patch_version
@@ -99,16 +99,16 @@ jobs:
         id: validate_or_fix_version
         run: |
           patch_version=$patch_version
-          main_version=$main_version
+          tag_version=$tag_version
 
-          main_major=$(echo "$main_version" | awk -F '.' '{print $1}')
-          main_minor=$(echo "$main_version" | awk -F '.' '{print $2}')
-          main_patch=$(echo "$main_version" | awk -F '.' '{print $3}')
+          tag_major=$(echo "$tag_version" | awk -F '.' '{print $1}')
+          tag_minor=$(echo "$tag_version" | awk -F '.' '{print $2}')
+          tag_patch=$(echo "$tag_version" | awk -F '.' '{print $3}')
 
           if [[ "$GITHUB_HEAD_REF" == patch* ]]; then
-            new_patch_version="$main_major.$main_minor.$((main_patch + 1))"
+            new_patch_version="$tag_major.$tag_minor.$((tag_patch + 1))"
           elif [[ "$GITHUB_HEAD_REF" == dev* ]]; then
-            new_patch_version="$main_major.$((main_minor + 1)).0"
+            new_patch_version="$tag_major.$((tag_minor + 1)).0"
           else
             echo "Error: Unsupported source branch type." >&2
             exit 1
