--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -44,7 +44,8 @@ jobs:
             exit 0
           fi
           git commit -m "Auto-format code with Black and isort"
-          git push origin HEAD
+          git push origin $GITHUB_HEAD_REF
+
 
   validate-version:
     name: Validate Version
